Solve 2015 Day 4 Part 1 in C
This one was a little tricky, and I decided not to even try to implement my own
MD5 but instead use an existing one. I found the source code to one online that
was free to use, and made it into a static library.

--- a/c/Makefile
+++ b/c/Makefile
@@ -2,7 +2,7 @@ BIN_DIR=./bin
 SRC_DIR=./src
 TEST_DIR=./test
 SHELL := /bin/bash
-CC = gcc
+CC = gcc -Lthird-party -lmd5 -Ithird-party
 SOURCES := $(wildcard $(SRC_DIR)/*.c)
 solutions := $(addsuffix .solution, $(basename $(SOURCES)))
 all-tests := $(addsuffix .test, $(basename $(wildcard $(TEST_DIR)/*/*.input)))
